force-app/main/default/objects/Ride__c/Ride__c.object-meta.xml
<CustomObject>
    <label>Ride</label>
    <nameField>
        <displayFormat>Ride-{00000}</displayFormat>
        <label>Ride Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>