force-app/main/default/objects/Ride__c/fields/Confidence_1__c.field-meta.xml
<CustomField>
    <fullName>Confidence_1__c</fullName>
    <label>Confidence #1</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>