force-app/main/default/objects/Ride__c/fields/Confidence_2__c.field-meta.xml
<CustomField>
    <fullName>Confidence_2__c</fullName>
    <label>Confidence #2</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>