force-app/main/default/objects/Ride__c/fields/Confidence_3__c.field-meta.xml
<CustomField>
    <fullName>Confidence_3__c</fullName>
    <label>Confidence #3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>