force-app/main/default/objects/Ride__c/fields/Elevator__c.field-meta.xml
<CustomField>
    <fullName>Elevator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elevator</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Rides</relationshipLabel>
    <relationshipName>Rides</relationshipName>
    <type>Lookup</type>
</CustomField>