force-app/main/default/objects/Ride__c/fields/PictureIdText__c.field-meta.xml
<CustomField>
    <fullName>PictureIdText__c</fullName>
    <label>PictureIdText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>