force-app/main/default/objects/Ride__c/fields/Predicted_Rider_3__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Rider_3__c</fullName>
    <label>Predicted Rider #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>