force-app/main/default/objects/Ride__c/fields/Rider__c.field-meta.xml
<CustomField>
    <fullName>Rider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Rides</relationshipLabel>
    <relationshipName>Rides</relationshipName>
    <type>Lookup</type>
</CustomField>