force-app/main/default/objects/Ride__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Rider__c</columns>
    <columns>Predicted_Rider_1__c</columns>
    <columns>Confidence_1__c</columns>
    <columns>Predicted_Rider_2__c</columns>
    <columns>Confidence_2__c</columns>
    <columns>Predicted_Rider_3__c</columns>
    <columns>Confidence_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>